--- a/index.html
+++ b/index.html
@@ -5,73 +5,157 @@
     <meta charset="UTF-8" />
     <!-- Responsável por receber configurações da página -->
     <title>Casa Criativa</title>
-
-    <style>
-      body {
-        background: #e5e5e5;
-        color: #25282b;
-        text-align: center;
-      }
-
-      button {
-        border: none;
-        font-weight: bold;
-        color: #ff5e84;
-        background: none;
-      }
-
-      button.fat {
-        color: white;
-        background: #ff5e84;
-      }
-
-      #footer a {
-        color: #25282b;
-        text-decoration: none;
-      }
-
-      .hide {
-        display: none;
-      }
-
-      #emoji {
-        font-family: 'Noto Color Emoji';
-      }
-    </style>
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <img src="logo.png" alt="Logo da Casa Criativa" />
+    <div id="container">
+      <section id="intro">
+        <header>
+          <img src="logo.png" alt="Logo da Casa Criativa" />
+        </header>
 
-    <p>
-      Ficar em casa em períodos longos não deve ser nada fácil.
-    </p>
+        <main>
+          <p>
+            Ficar em casa em períodos longos não deve ser nada fácil.
+          </p>
 
-    <p>
-      Por isso, iremos catalogar ideias,
-      <strong>brincadeiras, jogos, filmes, livros, cursos, dicas</strong>
-      e tudo que for necessário para tornar esse momento mais interessante.
-    </p>
+          <p>
+            Por isso, iremos catalogar ideias,
+            <strong>brincadeiras, jogos, filmes, livros, cursos, dicas</strong>
+            e tudo que for necessário para tornar esse momento mais
+            interessante.
+          </p>
 
-    <p>
-      Comece clicando em ver ideias para ver as ideias cadastradas e contribua
-      adicionando a sua ideia
-    </p>
+          <p>
+            Comece clicando em ver ideias para ver as ideias cadastradas e
+            contribua adicionando a sua ideia
+          </p>
+        </main>
 
-    <button>+ Adicionar Ideia</button>
-    <button class="fat">Ver Ideias</button>
+        <section id="buttons">
+          <button onClick="onOff()">+ Adicionar Ideia</button>
+          <button class="fat">Ver Ideias</button>
+        </section>
 
-    <p id="footer">
-      com <span id="emoji">❤</span>
-      <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
-    </p>
+        <footer>
+          Com <span id="emoji">❤</span>
+          <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
+        </footer>
+      </section>
 
-    <script>
-      document
-        .querySelector('button.fat')
-        .addEventListener('click', function() {
-          document.querySelector('#footer').classList.toggle('hide');
-        });
-    </script>
+      <section id="last-ideas">
+        <div class="idea">
+          <img
+            src="https://image.flaticon.com/icons/svg/2729/2729007.svg"
+            alt="Homem programando"
+          />
+
+          <div class="content">
+            <h3>Cursos de Programação</h3>
+
+            <p>Estudo</p>
+
+            <div class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              tempora sed repudiandae, id asperiores praesentium provident, in
+              eveniet quidem ea sit! Totam impedit obcaecati facere reiciendis
+              magni facilis officia fuga?
+            </div>
+
+            <a href="#">Ir para a Ideia</a>
+          </div>
+        </div>
+
+        <div class="idea">
+          <img
+            src="https://image.flaticon.com/icons/svg/2729/2729005.svg"
+            alt="Casa com peso"
+          />
+
+          <div class="content">
+            <h3>Exercícios</h3>
+
+            <p>Saúde</p>
+
+            <div class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              tempora sed repudiandae, id asperiores praesentium provident, in
+              eveniet quidem ea sit! Totam impedit obcaecati facere reiciendis
+              magni facilis officia fuga?
+            </div>
+
+            <a href="#">Ir para a Ideia</a>
+          </div>
+        </div>
+
+        <div class="idea">
+          <img
+            src="https://image.flaticon.com/icons/svg/2729/2729027.svg"
+            alt="Mulher meditando"
+          />
+
+          <div class="content">
+            <h3>Meditação</h3>
+
+            <p>Mentalidade</p>
+
+            <div class="description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+              tempora sed repudiandae, id asperiores praesentium provident, in
+              eveniet quidem ea sit! Totam impedit obcaecati facere reiciendis
+              magni facilis officia fuga?
+            </div>
+
+            <a href="#">Ir para a Ideia</a>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Modal -->
+    <div id="modal" class="hide">
+      <div class="content">
+        <h1>Nova Ideia</h1>
+
+        <form action="">
+          <div class="input-wrapper">
+            <label for="title">Título da Ideia</label>
+            <input type="text" name="title" />
+          </div>
+
+          <div class="input-wrapper">
+            <label for="category">Categoria</label>
+            <input type="text" name="category" />
+          </div>
+
+          <div class="input-wrapper">
+            <label for="image">Link da Imagem</label>
+            <input type="url" name="image" />
+          </div>
+
+          <div class="input-wrapper">
+            <label for="description"
+              >Digite uma descrição para essa ideia</label
+            >
+            <textarea name="description" cols="30" rows="10"></textarea>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="link">Link da Ideia</label>
+            <input type="url" name="link" />
+          </div>
+
+          <a href="#" onclick="onOff()">Voltar</a>
+          <button>Salvar</button>
+        </form>
+      </div>
+    </div>
+
+    <script src="scripts.js"></script>
   </body>
 </html>
