Corrected the modal frontend, added a new page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div id="container">
       <section id="intro">
         <header>
-          <img src="logo.png" alt="Logo da Casa Criativa" />
+          <a href="index.html"
+            ><img src="logo.png" alt="Logo da Casa Criativa"
+          /></a>
         </header>
 
         <main>
@@ -39,7 +41,7 @@
 
         <section id="buttons">
           <button onClick="onOff()">+ Adicionar Ideia</button>
-          <button class="fat">Ver Ideias</button>
+          <a href="ideias.html" class="button">Ver Ideias</a>
         </section>
 
         <footer>
